kubernetes/apps/shelf-system/shelf/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: shelf-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/instance: shelf
    egress:
      - toEndpoints:
          - {}
      - toFQDNs:
          - matchName: registry.npmjs.org
          - matchPattern: "*.npmjs.org"
          - matchName: binaries.prisma.sh
          - matchName: api.maptiler.com
          - matchName: nominatim.openstreetmap.org
        toPorts:
          - ports:
              - port: "443"
